<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".LauncherActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal">

        <TextView
            android:id="@+id/header"
            style="@style/Launcher.Header"
            android:layout_alignEnd="@+id/make_material"
            android:layout_alignStart="@+id/make_material"
            android:text="@string/launcher_header" />

        <Button
            android:id="@+id/popular"
            style="@style/Launcher.Button"
            android:layout_alignEnd="@+id/make_material"
            android:layout_alignStart="@+id/make_material"
            android:layout_below="@id/header"
            android:onClick="onButtonClick"
            android:text="@string/button_popular" />

        <Button
            android:id="@+id/stock"
            style="@style/Launcher.Button"
            android:layout_alignEnd="@+id/make_material"
            android:layout_alignStart="@+id/make_material"
            android:layout_below="@id/popular"
            android:onClick="onButtonClick"
            android:text="@string/button_stock" />

        <Button
            android:id="@+id/bigger"
            style="@style/Launcher.Button"
            android:layout_alignEnd="@+id/make_material"
            android:layout_alignStart="@+id/make_material"
            android:layout_below="@id/stock"
            android:onClick="onButtonClick"
            android:text="@string/button_build_bigger" />

        <Button
            android:id="@+id/make_material"
            style="@style/Launcher.Button"
            android:layout_below="@id/bigger"
            android:onClick="onButtonClick"
            android:text="@string/button_make_material" />

        <Button
            android:id="@+id/ubiquitous"
            style="@style/Launcher.Button"
            android:layout_alignEnd="@+id/make_material"
            android:layout_alignStart="@+id/make_material"
            android:layout_below="@id/make_material"
            android:onClick="onButtonClick"
            android:text="@string/button_ubiquitous" />

        <Button
            android:id="@+id/capstone"
            style="@style/Launcher.Button"
            android:layout_alignEnd="@+id/make_material"
            android:layout_alignStart="@+id/make_material"
            android:layout_below="@id/ubiquitous"
            android:onClick="onButtonClick"
            android:text="@string/button_capstone" />

    </RelativeLayout>

</ScrollView>